* patch by Sam Hathaway to make web alpine build when debug is turned      off.
   * Fix compilation bug that made build fail if passfile was not defined.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,4 +37,4 @@ clean-local:
 
 man_MANS = doc/alpine.1 doc/pico.1 doc/pilot.1 doc/rpdump.1 doc/rpload.1
 
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = --install -I m4
