--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -34,14 +34,14 @@ INSTALL_DATA = ${INSTALL} -m 644
 # We use $(mkdir_p).
 # In automake <= 1.9.x, $(mkdir_p) is defined either as "mkdir -p --" or as
 # "$(mkinstalldirs)" or as "$(install_sh) -d". For these automake versions,
-# ${SHELL} /var/run/media/chappa/Work/alpine/alpinegit/install-sh does not start with $(SHELL), so we add it.
-# In automake >= 1.10, $(MKDIR_P) is derived from ${MKDIR_P}, which is defined
+# ${SHELL} /media/Work/alpine/alpinegit/install-sh does not start with $(SHELL), so we add it.
+# In automake >= 1.10, /bin/mkdir -p is derived from ${MKDIR_P}, which is defined
 # either as "/path/to/mkdir -p" or ".../install-sh -c -d". For these automake
 # versions, $(mkinstalldirs) and $(install_sh) are unused.
-mkinstalldirs = $(SHELL) ${SHELL} /var/run/media/chappa/Work/alpine/alpinegit/install-sh -d
-install_sh = $(SHELL) ${SHELL} /var/run/media/chappa/Work/alpine/alpinegit/install-sh
-MKDIR_P = /usr/bin/mkdir -p
-mkdir_p = $(MKDIR_P)
+mkinstalldirs = $(SHELL) ${SHELL} /media/Work/alpine/alpinegit/install-sh -d
+install_sh = $(SHELL) ${SHELL} /media/Work/alpine/alpinegit/install-sh
+MKDIR_P = /bin/mkdir -p
+mkdir_p = /bin/mkdir -p
 
 GMSGFMT_ = /usr/bin/msgfmt
 GMSGFMT_no = /usr/bin/msgfmt
