--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,11 @@ web/bin
 wpcomm*
 web/*/*/alpined
 web/*/*/alpineldap
-.gitignore
+*.gitignore
 local.c
 autom4te.cache/output.0
 autom4te.cache/output.1
 autom4te.cache/traces.0
 autom4te.cache/traces.1
 doit
+*doc/tech-notes/tech-notes.txt
