--- a/Makefile.in
+++ b/Makefile.in
@@ -411,7 +411,7 @@ EXTRA_DIST = config.rpath VERSION README LICENSE
 SUBDIRS = m4 po $(REGEX_BUILD) pith pico alpine $(WEB_PUBCOOKIE_BUILD) $(WEB_BUILD)
 BUILT_SOURCES = c-client.d c-client $(WEB_PUBCOOKIE_LINK)
 CLEANFILES = c-client
-man_MANS = doc/alpine.1 doc/pico.1 doc/pilot.1 doc/rpdump.1 doc/rpload.1
+man_MANS = doc/man1/alpine.1 doc/man1/pico.1 doc/man1/pilot.1 doc/man1/rpdump.1 doc/man1/rpload.1
 ACLOCAL_AMFLAGS = --install -I m4
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
