--- a/mapi/pmapi.rc
+++ b/mapi/pmapi.rc
@@ -114,7 +114,7 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "Comments", "alpine info: http://patches.freeiz.com/alpine\0"
+            VALUE "Comments", "alpine info: http://alpine.freeiz.com/alpine\0"
             VALUE "CompanyName", "Patches for Alpine\0"
             VALUE "FileDescription", "Simple MAPI DLL for Alpine for Windows\0"
             VALUE "FileVersion", "2.21.1\0"
