* A little bit more work on the repository. We do not commit files      generated by the configure script.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@ rem
 web/bin
 web/lib/
 *~
+*.o
+*.a
+*.orig
+*.rej
+date.c
+an
+alpine/alpine
+alpine/rpdump
+alpine/rpload
+c-client
+imap/OSTYPE
+imap/SPECIALS
+imap/c-client/
+imap/dmail/
+imap/imapd/
+imap/ip6
+imap/ipopd/
+imap/mailutil/
+imap/mlock/
+imap/mtest/
+imap/tmail/
+pico/pico
+pico/pilot
+pith/help_c_gen
+pith/help_h_gen
+pith/helptext.c
+pith/helptext.h
+
