--- a/pith/makefile.wnt
+++ b/pith/makefile.wnt
@@ -45,7 +45,7 @@ HFILES=	../include/system.h ../include/general.h \
 	init.h keyword.h ldap.h list.h mailcap.h mailcmd.h mailindx.h maillist.h \
 	mailpart.h mailview.h margin.h mimedesc.h mimetype.h msgno.h newmail.h news.h \
 	options.h pattern.h pineelt.h pipe.h readfile.h remote.h remtype.h repltype.h reply.h \
-	rfc2231.h save.h savetype.h search.h send.h sequence.h signal.h sort.h sorttype.h \
+	rfc2231.h save.h savetype.h search.h send.h sequence.h signal.h smime.h smkeys.h sort.h sorttype.h \
 	state.h status.h store.h stream.h string.h strlst.h takeaddr.h tempfile.h text.h \
 	thread.h url.h user.h util.h
 
@@ -54,9 +54,9 @@ OFILES=	ablookup.obj abdlc.obj addrbook.obj addrstring.obj adrbklib.obj bldaddr.
 	filter.obj flag.obj folder.obj handle.obj help.obj helptext.obj hist.obj icache.obj imap.obj init.obj \
 	keyword.obj ldap.obj list.obj mailcap.obj mailcmd.obj mailindx.obj maillist.obj mailview.obj \
 	margin.obj mimedesc.obj mimetype.obj msgno.obj newmail.obj news.obj pattern.obj pipe.obj \
-	readfile.obj remote.obj reply.obj rfc2231.obj save.obj search.obj sequence.obj send.obj sort.obj state.obj \
-	status.obj store.obj stream.obj string.obj strlst.obj takeaddr.obj tempfile.obj text.obj \
-	thread.obj adjtime.obj url.obj util.obj
+	readfile.obj remote.obj reply.obj rfc2231.obj save.obj search.obj sequence.obj send.obj \
+	smime.obj smkeys.obj sort.obj state.obj status.obj store.obj stream.obj string.obj strlst.obj \
+	takeaddr.obj tempfile.obj text.obj thread.obj adjtime.obj url.obj util.obj
 
 all:		libpith.lib
 
